changes regarding css when presenting colapsable results map highlighting (not finished)

--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
   <!DOCTYPE HTML>
   <html>
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="Content-type" content="text/html; charset=UTF-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Timeline basic demo</title>
    <!-- <script src="components/vis/moment.min.js"></script>
     <script src="components/vis/moment-timezone-with-data.min.js"></script> -->
@@ -39,7 +38,7 @@
     </style>
   </head>
   <body>
-  <div class="ui sidebar">
+  <div class="ui wide sidebar">
   
   <div id="settingsPanel">
   <h3>Categories</h3>
